@@ -15,6 +15,17 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add support for user-defined events. Those can be called from the Python plugin.
+    server/plugins.c
+    plugins/common/include/plugin_common.h
+    plugins/common/plugin_common.c
+    plugins/cfpython/cfpython_object.c
+    plugins/cfpython/include/cfpython_object_private.h
+    plugins/cfpython/cfpython.c
+    include/sproto.h
+    include/plugin.h
+Yann Chachkoff (gros) 2007-12-23
+
 Add error information to CrossfireMap.TriggerConnected, make magice_ear scriptable
     server/monster.c
     plugins/cfpython/cfpython_map.c
